[gd_scene load_steps=2 format=3 uid="uid://cjk4jqi8uk271"]

[ext_resource type="Script" path="res://program54b.gd" id="1_n75bd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n75bd")

[node name="var1" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 311.0
offset_bottom = 89.0
text = "Variable 1"

[node name="var2" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 89.0
offset_right = 311.0
offset_bottom = 154.0
text = "Variable 2"

[node name="var3" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 154.0
offset_right = 311.0
offset_bottom = 219.0
text = "Variable 3"

[node name="var4" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 219.0
offset_right = 311.0
offset_bottom = 284.0
text = "Variable 4"

[node name="sum" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 284.0
offset_right = 311.0
offset_bottom = 349.0
text = "Variable Sum"

[node name="avg" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 349.0
offset_right = 311.0
offset_bottom = 414.0
text = "Variable Average"

[node name="var1inp" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 24.0
offset_right = 1084.0
offset_bottom = 89.0

[node name="var2inp" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 89.0
offset_right = 1084.0
offset_bottom = 154.0

[node name="var3inp" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 154.0
offset_right = 1084.0
offset_bottom = 219.0

[node name="var4inp" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 219.0
offset_right = 1084.0
offset_bottom = 284.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_top = 502.0
offset_right = 357.0
offset_bottom = 650.0
text = "Calculate!"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 502.0
offset_right = 757.0
offset_bottom = 650.0
text = "Clear
"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 798.0
offset_top = 502.0
offset_right = 1155.0
offset_bottom = 650.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
